Add solution for Apple and Orange hits

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /JavaStringReverse/build/
 /GradingStudents/nbproject/private/
 /GradingStudents/build/
+/Algorithms/AppleAndOrange/nbproject/private/
+/Algorithms/AppleAndOrange/build/
