Started work on the Substring Comparison challenge. Mostly boilerplate

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /GradingStudents/build/
 /Algorithms/AppleAndOrange/nbproject/private/
 /Algorithms/AppleAndOrange/build/
+/JavaChallenges/SubstringComparisons/nbproject/private/
