Finished a working version of the test case

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Algorithms/AppleAndOrange/nbproject/private/
 /Algorithms/AppleAndOrange/build/
 /JavaChallenges/SubstringComparisons/nbproject/private/
+/JavaChallenges/SubstringComparisons/build/
