Started work on the Migratory Birds challenge

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /Algorithms/AppleAndOrange/build/
 /JavaChallenges/SubstringComparisons/nbproject/private/
 /JavaChallenges/SubstringComparisons/build/
+/Algorithms/MigratoryBirds/nbproject/private/
+/Algorithms/MigratoryBirds/build/
