Added the solution for Java Anagrams. This is the finished code.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /JavaChallenges/SubstringComparisons/build/
 /Algorithms/MigratoryBirds/nbproject/private/
 /Algorithms/MigratoryBirds/build/
+/JavaChallenges/Anagrams/nbproject/private/
+/JavaChallenges/Anagrams/build/
