Finalized the Bon Appetit algorithm challenge

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /Algorithms/MigratoryBirds/build/
 /JavaChallenges/Anagrams/nbproject/private/
 /JavaChallenges/Anagrams/build/
+/Algorithms/BonAppetit/nbproject/private/
