Finished solution for Sock Merchant

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /JavaChallenges/Anagrams/nbproject/private/
 /JavaChallenges/Anagrams/build/
 /Algorithms/BonAppetit/nbproject/private/
+/Algorithms/SockMerchant/nbproject/private/
+/Algorithms/SockMerchant/build/
