Started working on Drawing Book solution

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /Algorithms/BonAppetit/nbproject/private/
 /Algorithms/SockMerchant/nbproject/private/
 /Algorithms/SockMerchant/build/
+/Algorithms/DrawingBook/nbproject/private/
