Continued working on Drawing Book solution

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /Algorithms/SockMerchant/nbproject/private/
 /Algorithms/SockMerchant/build/
 /Algorithms/DrawingBook/nbproject/private/
+/Algorithms/DrawingBook/build/
