--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /Algorithms/SockMerchant/build/
 /Algorithms/DrawingBook/nbproject/private/
 /Algorithms/DrawingBook/build/
+/Algorithms/ElectronicShop/nbproject/private/
