Added solution to Divisible Sum Pairs

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /Algorithms/DrawingBook/nbproject/private/
 /Algorithms/DrawingBook/build/
 /Algorithms/ElectronicShop/nbproject/private/
+/Algorithms/DivisibleSumPairs/nbproject/private/
