Add solution for Breaking the Record challenge

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /Algorithms/DrawingBook/build/
 /Algorithms/ElectronicShop/nbproject/private/
 /Algorithms/DivisibleSumPairs/nbproject/private/
+/Algorithms/BreakingTheRecords/build/
