Add solution to Birthday Cake Candles and update the README

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /Algorithms/ElectronicShop/nbproject/private/
 /Algorithms/DivisibleSumPairs/nbproject/private/
 /Algorithms/BreakingTheRecords/build/
+/Algorithms/BrithdayCakeCandles/dist/
+/Algorithms/BreakingTheRecords/dist/
