--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,8 @@
 /Algorithms/ElectronicShop/nbproject/private/
 /Algorithms/DivisibleSumPairs/nbproject/private/
 /Algorithms/BreakingTheRecords/build/
+/Algorithms/BreakingTheRecords/nbproject/private/
 /Algorithms/BrithdayCakeCandles/dist/
+/Algorithms/BrithdayCakeCandles/nbproject/private/
 /Algorithms/BreakingTheRecords/dist/
+/Algorithms/BreakingTheRecords/nbproject/private/
