changed some of the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@
 /Algorithms/BrithdayCakeCandles/nbproject/private/
 /Algorithms/BreakingTheRecords/dist/
 /Algorithms/BreakingTheRecords/nbproject/private/
+/Algorithms/BreakingTheRecord/nbproject/private/
+/Algorithms/BreakingTheRecord/build/
+/Algorithms/BirthdayCakeCandles/nbproject/private/
+/Algorithms/BirthdayCakeCandles/build/
