Solution for Cats and Mouse

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@
 /Algorithms/BreakingTheRecord/build/
 /Algorithms/BirthdayCakeCandles/nbproject/private/
 /Algorithms/BirthdayCakeCandles/build/
+/Algorithms/CatsAndMouse/nbproject/private/
+/Algorithms/CatsAndMouse/dist/
+/Algorithms/CatsAndMouse/build/
