add solution to Counting Valleys

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 /Algorithms/CatsAndMouse/nbproject/private/
 /Algorithms/CatsAndMouse/dist/
 /Algorithms/CatsAndMouse/build/
+/Algorithms/CountingValleys/nbproject/private/
+/Algorithms/CountingValleys/build/
