finished solutions Picking Numbers and Marc's Cakewalk

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@
 /Algorithms/CatsAndMouse/build/
 /Algorithms/CountingValleys/nbproject/private/
 /Algorithms/CountingValleys/build/
+/Algorithms/PickingNumbers/nbproject/private/
+/Algorithms/PickingNumbers/build/
+/Algorithms/MarcsCakewalk/nbproject/private/
+/Algorithms/MarcsCakewalk/build/
