started on Climbing the Leaderboard and updated README

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /Algorithms/PickingNumbers/build/
 /Algorithms/MarcsCakewalk/nbproject/private/
 /Algorithms/MarcsCakewalk/build/
+/Algorithms/ClimbingTheLeaderboard/nbproject/private/
