Setup project locally for Climbing the Leaderboard

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@
 /Algorithms/MarcsCakewalk/nbproject/private/
 /Algorithms/MarcsCakewalk/build/
 /Algorithms/ClimbingTheLeaderboard/nbproject/private/
+/Algorithms/ClimbingTheLeaderboard/build/
