partial solution for ClimbingTheLeaderboard

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 /Algorithms/MarcsCakewalk/build/
 /Algorithms/ClimbingTheLeaderboard/nbproject/private/
 /Algorithms/ClimbingTheLeaderboard/build/
+/Algorithms/ClimbingTheLeaderboard/dist/
