solution for PDFviewer

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@
 /Algorithms/ClimbingTheLeaderboard/nbproject/private/
 /Algorithms/ClimbingTheLeaderboard/build/
 /Algorithms/ClimbingTheLeaderboard/dist/
+/Algorithms/PDFviewer/nbproject/private/
+/Algorithms/PDFviewer/build/
+/Algorithms/PDFviewer/dist/
