solution for the hurdle race

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@
 /Algorithms/PDFviewer/nbproject/private/
 /Algorithms/PDFviewer/build/
 /Algorithms/PDFviewer/dist/
+/Algorithms/TheHurdleRace/nbproject/private/
+/Algorithms/TheHurdleRace/build/
