solution for Day of the Programmer and update README

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@
 /Algorithms/PDFviewer/dist/
 /Algorithms/TheHurdleRace/nbproject/private/
 /Algorithms/TheHurdleRace/build/
+/Algorithms/Day of the Programmer/nbproject/private/
+/Algorithms/Day of the Programmer/build/
