Submitted challenge for CurrencyFormatter. Started DateTime challenge

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,8 @@
 /Algorithms/TheHurdleRace/build/
 /Algorithms/Day of the Programmer/nbproject/private/
 /Algorithms/Day of the Programmer/build/
+/JavaChallenges/DateAndTime/nbproject/private/
+/JavaChallenges/DateAndTime/dist/
+/JavaChallenges/DateAndTime/build/
+/JavaChallenges/CurrencyFormatter/nbproject/private/
+/JavaChallenges/CurrencyFormatter/build/
