Added solutions AngryProfessor BeautifulDayAtTheMovies and FindDigits

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,9 @@
 /JavaChallenges/DateAndTime/build/
 /JavaChallenges/CurrencyFormatter/nbproject/private/
 /JavaChallenges/CurrencyFormatter/build/
+/Algorithms/AngryProfessor/nbproject/private/
+/Algorithms/AngryProfessor/build/
+/Algorithms/BeautifulDayAtTheMovies/nbproject/private/
+/Algorithms/BeautifulDayAtTheMovies/build/
+/Algorithms/FindDigits/nbproject/private/
+/Algorithms/FindDigits/build/
