Add solution for CircularArrayRotation

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@
 /Algorithms/BeautifulDayAtTheMovies/build/
 /Algorithms/FindDigits/nbproject/private/
 /Algorithms/FindDigits/build/
+/Algorithms/CircularArrayRotation/nbproject/private/
+/Algorithms/CircularArrayRotation/build/
