--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,7 @@
 /Algorithms/FindDigits/build/
 /Algorithms/CircularArrayRotation/nbproject/private/
 /Algorithms/CircularArrayRotation/build/
+/Algorithms/BetweenTwoSets/nbproject/private/
+/Algorithms/CutTheSticks/nbproject/private/
+/Algorithms/CutTheSticks/build/
+/Algorithms/CutTheSticks/dist/
