Add Java Challenge solution for Pattern Syntax Checker

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@
 /Algorithms/CutTheSticks/nbproject/private/
 /Algorithms/CutTheSticks/build/
 /Algorithms/CutTheSticks/dist/
+/JavaChallenges/PatternSyntaxChecker/nbproject/private/
+/JavaChallenges/PatternSyntaxChecker/build/
