Added solutions for JavaRegex and JavaList

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,9 @@
 /Algorithms/CutTheSticks/dist/
 /JavaChallenges/PatternSyntaxChecker/nbproject/private/
 /JavaChallenges/PatternSyntaxChecker/build/
+/JavaChallenges/JavaRegex/nbproject/private/
+/JavaChallenges/JavaRegex/dist/
+/JavaChallenges/JavaRegex/build/
+/JavaChallenges/JavaList/nbproject/private/
+/JavaChallenges/JavaList/dist/
+/JavaChallenges/JavaList/build/
