Added solution for JavaMap and updated README

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@
 /JavaChallenges/JavaList/nbproject/private/
 /JavaChallenges/JavaList/dist/
 /JavaChallenges/JavaList/build/
+/JavaChallenges/JavaMap/nbproject/private/
+/JavaChallenges/JavaMap/build/
