--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@
 /JavaChallenges/JavaList/build/
 /JavaChallenges/JavaMap/nbproject/private/
 /JavaChallenges/JavaMap/build/
+/Algorithms/BetweenTwoSets/build/
