--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@
 /JavaChallenges/JavaMap/nbproject/private/
 /JavaChallenges/JavaMap/build/
 /Algorithms/BetweenTwoSets/build/
+/JavaChallenges/ArrayList/nbproject/private/
+/JavaChallenges/JavaArrayList/nbproject/private/
+/JavaChallenges/JavaArrayList/build/
+/JavaChallenges/JavaArrayList/dist/
